--- a/.gitignore
+++ b/.gitignore
@@ -1453,4 +1453,4 @@ lzero/mcts/ctree/ctree_alphazero/pybind11
 zoo/jericho/envs/z-machine-games-master
 test.py
 train.sh
-vis_mask.py
+vis_test.py
